--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -25,7 +25,9 @@
     "@clr/ui": "13.0.0-next.1",
     "@webcomponents/custom-elements": "1.5.0",
     "@webcomponents/webcomponentsjs": " 2.6.0",
-    "rxjs": "7.5.2",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
+    "rxjs": "^7.5.2",
     "tslib": "2.3.1",
     "zone.js": "0.11.4"
   },
