10 hours of hard work. P.S. Bobby didnt help.

--- a/WebApp/angular.json
+++ b/WebApp/angular.json
@@ -25,7 +25,9 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/lib",
+              "src/files"
             ],
             "styles": [
               "src/styles.scss",
@@ -96,7 +98,9 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/lib",
+              "src/files"
             ],
             "styles": [
               "src/styles.scss",
