--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -28,6 +28,7 @@
     "@webcomponents/custom-elements": "1.5.0",
     "@webcomponents/webcomponentsjs": " 2.6.0",
     "jwt-decode": "^3.1.2",
+    "mime-types": "^2.1.34",
     "moment": "^2.29.1",
     "rxjs": "^7.5.2",
     "tslib": "2.3.1",
