--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "13.1.3",
     "@angular/platform-browser-dynamic": "13.1.3",
     "@angular/router": "13.1.3",
+    "@cds/angular": "^5.1.1",
     "@cds/core": "5.6.2",
     "@clr/angular": "13.0.0-next.1",
     "@clr/icons": "13.0.0-next.1",
@@ -32,7 +33,8 @@
     "moment": "^2.29.1",
     "rxjs": "^7.5.2",
     "tslib": "2.3.1",
-    "zone.js": "0.11.4"
+    "zone.js": "0.11.4",
+    "@cds/city": "^1.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.1.4",
